# Cpp_quizes

./: CMakeLists.txt
CppND-Garbage-Collector-master/: gc_details.h  gc_pointer.h
S_exam/: LL.cpp  flatten_LL.cpp  multitask.c  q1.cpp  q12.cpp  unshared_ptr.cpp  vehiclevo_q.c
cpp14/: binary_literals.cpp  decltype.cpp  deprecated.cpp  generic_lambda.cpp  ifconstexpr.cpp  type_trails.cpp  variable_template.cpp
cpp17/: func_obj.cpp  function_template.cpp  optional.cpp
data structure/: data structure.sln
data structure/Debug/: lnk{848B6EF5-118A-47AC-87F6-5BFFB3B6163D}.tmp
data structure/Project1/: Project1.vcxproj  Project1.vcxproj.filters  Reverse_list.cpp  linkedlist.h  main.cpp  sorting.h
data structure/Project1/Debug/: CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb  vc140.idb  vc141.idb
hacker_rank_quizes/: hacker_rank_quizes.sln
hacker_rank_quizes/Debug/: hacker_rank_quizes.ilk
hacker_rank_quizes/hacker_rank_quizes/: Abstract_class.cpp  Box_it.cpp  Exception_server.cpp  Permutation_string.cpp  Variable Sized Arrays.cpp  class-object.cpp  countsetbits.cpp  exception-handling.cpp  exception_inheritance.cpp  hacker_rank_quizes.vcxproj  hacker_rank_quizes.vcxproj.filters  minStart.cpp  triple_sum.cpp  validstr.cpp
hacker_rank_quizes/hacker_rank_quizes/Debug/: vc140.idb  (+1 more)
lib/: CMakeLists.txt
siemens_exam/: q11.cpp  q2.cpp  q5.cpp  q9.cpp
src/: abs_class.cpp  basic_oop.cpp  class_template.cpp  main.c  main.cpp  move_sem_app.cpp  move_semantics.cpp  qsort.cpp  smart_ptr.cpp  smrt_prt.cpp  type_traits.cpp  wchar.cpp
stl/: boost_string.cpp  cin_vector.cpp  stlcopy.cpp
threads/: CMakelists.txt
threads/src/: ex2_mutex.cpp  lazy.cpp  main.cpp
(+11 files in other folders)
